# fullstacksandbox23

./: .gitignore  AGENTS.md  LICENSE  README.md  compose.override.test.yml  compose.override.yml  compose.prod.yml  compose.yml
backend/: .gitignore  (+2 more)
backendAPI/: .dockerignore  Dockerfile  README.md  pyproject.toml
backendAPI/app/: .gitignore
backendAPI/app/core/: config.py  databases.py
backendAPI/app/migrations/versions/: 2023_12_08_1453-1bb7443317ce_inital_revision.py
backendAPI/app/models/: demo_resource.py
backendAPI/app/routers/api/v1/: __init__.py  test_core.py
backendAPI/scripts/: db_migration_check.sh  db_migration_create.sh  db_migration_downgrade  db_migration_run.sh  postgres_migration_check.sh  postgres_migration_create.sh  postgres_migration_downgrade  postgres_migration_revision.sh  postgres_migration_run.sh  postgres_migration_upgrade.sh
backendAPI/scripts/dev/: postgres_migration_check.sh  postgres_migration_downgrade.sh  postgres_migration_revision.sh  postgres_migration_upgrade.sh
backendAPI/scripts/stage_prod/: postgres_migration_check.sh  postgres_migration_downgrade.sh  postgres_migration_revision.sh  postgres_migration_upgrade.sh
backendAPI/src/: .env.example  .gitignore  __init__.py  alembic.ini  alembic_stage_prod.ini  config.py  conftest.py  databases.py  main.py
backendAPI/src/core/: __init__.py  access.py  access_control.py  cache.py  config.py  connections.py  databases.py  oauth.py  security.py  types.py
backendAPI/src/core/tests/: test_access.py  test_security.py
backendAPI/src/crud/: __init__.py  access.py  azure_group.py  base.py  category.py  demo_file.py  demo_resource.py  group.py  identity.py  protected_resource.py  public_resource.py  tag.py  user.py
backendAPI/src/crud/tests/: test_access.py  test_access_crud.py
backendAPI/src/dependencies/fastapi_with_socketio/: applications.py  exceptions.py  routing.py
backendAPI/src/dependencies/starlette_with_socketio/: routing.py  socketio.py
backendAPI/src/migrations/dev/: env.py  script.py.mako
backendAPI/src/migrations/dev/versions/: 2023_12_08_1453-1bb7443317ce_inital_revision.py  2023_12_10_1509-c03c94d7b339_test_migration.py  2023_12_13_1912-a0c481964dcf_.py  2023_12_19_1243-eee428d55a3b_.py  2023_12_19_1325-ecfdc4d63db2_.py  2023_12_19_1517-52a27a4fcaea_.py  2023_12_20_2131-8a72b9e643e9_.py  2023_12_22_1107-03c89ba6503e_.py  2024_01_16_1922-96558635e1c0_.py  2024_01_17_1125-4416b91e62af_.py  2024_01_18_1847-71d5a55230a4_.py  2024_02_02_1945-f484d8efa331_.py  2024_02_02_1951-bc60cd578fce_.py  2024_02_02_2054-acda0b418976_.py  2024_02_13_1625-a16bba0ff83e_.py  2024_02_16_1455-4c9b010de752_.py  2024_02_18_1721-2b44fb1a477c_.py  2024_02_18_1728-ba06c0fd853a_.py  2024_02_18_1729-2cbbceed3055_.py  2024_02_23_1416-88fc6bf924c6_.py  2024_02_25_1640-e87f4b435b9b_.py  2024_02_27_1044-087ef64319d5_.py  2024_02_27_1046-d3c5f159a166_.py  2024_09_13_1011_dfac770f790f_.py  2024_09_13_1012_3fa4ef096aa5_.py  2024_11_13_1915_255fdcec93d4_.py  2024_11_13_1915_264046d1d607_.py  2024_12_14_2136_bb4796208f67_.py  2024_12_16_1154_63f43f0918f2_.py  2025_01_08_0115_bf35f2cf64ce_.py  2025_01_08_1123_d1a083b31de9_.py  2025_02_03_1257_34eec7ff0972_.py  2025_06_23_1514_7fd1046d6acc_.py  (+2 more)
backendAPI/src/migrations/stage_prod/: env.py  script.py.mako
backendAPI/src/models/: __init__.py  access.py  azure_group.py  azure_group_user_link.py  base.py  category.py  demo_file.py  demo_resource.py  demo_resource_tag_link.py  group.py  group_user_link.py  identity.py  protected_resource.py  public_resource.py  tag.py  topic.py  user.py
backendAPI/src/routers/: __init__.py  conftest.py  system.py
backendAPI/src/routers/system/: status.py  test_status.py
backendAPI/src/tests/: .env.example  demo_file_01.txt  utils.py
(+671 files in other folders)
