[project]
name = "backend_api"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    'fastapi[standard]>=0.115.6,<1',
    'pyjwt[crypto]>=2.10.1,<3',
    'requests>=2.32.3,<3',
    'uvicorn[all]>=0.32.1,<1',
    'azure-identity>=1.19.0,<2',
    'azure-keyvault-secrets>=4.9.0,<5',
    'pydantic-settings>=2.6.1,<3',
    'httpx>=0.28.1,<1',
    'asyncpg>=0.30.0,<1',
    'sqlmodel>=0.0.22,<0.1.0',
    'pydantic>=2.10.3,<3',
    'alembic>=1.14.0,<2',
    'redis>=5.2.1,<6',
    'PyJWT>=2.10.1,<3',
    'msal>=1.31.1,<2',
    'python-multipart>=0.0.19,<0.1',
    'greenlet>=3.1.1,<4', # required by sqlalchemy's asyncio!
    'websockets>=14.1,<15',
    'python-socketio[asyncio_client]>=5.11.4,<6',
    'msal-extensions>=1.2.0,<2',
]

[project.optional-dependencies]
dev = [
    'black==24.10.0',
    'ruff==0.8.2',
    'isort==5.13.2',
    'pytest==8.3.4',
]

[tool.isort]
profile = "black"

[tool.black]
exclude = 'src/migrations/'

[tool.ruff]
line-length = 88  # Match Black's default line length
lint.select = ["E", "F", "W", "C90"]  # Customize as needed
lint.ignore = ["E501"]  # Ignore line length to avoid conflicts with Black