[project]
name = "backend_api"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    'fastapi[standard]>=0.116.1,<1',
    'pyjwt[crypto]>=2.10.1,<3',
    'requests>=2.32.3,<3',
    'uvicorn[all]>=0.34.0,<1',
    'azure-identity>=1.19.0,<2',
    'azure-keyvault-secrets>=4.9.0,<5',
    'pydantic-settings>=2.10.1,<3',
    'httpx>=0.28.1,<1',
    'asyncpg>=0.30.0,<1',
    'sqlmodel>=0.0.22,<0.1.0',
    'pydantic>=2.11.7,<3',
    'alembic>=1.14.0,<2',
    'redis>=6.4.0,<7',
    'PyJWT>=2.10.1,<3', # TBD: how does this differ from pyjwt[crypto]?
    'msal>=1.31.1,<2',
    'python-multipart>=0.0.20,<0.1',
    'greenlet>=3.1.1,<4', # required by sqlalchemy's asyncio!
    'websockets>=15.0.1,<16',
    'python-socketio[asyncio_client]==5.14.0',
    'python-engineio[asyncio_client]==4.12.2',
    'msal-extensions>=1.2.0,<2',
]

[project.optional-dependencies]
dev = [
    'black>=25.1.0,<26',
    'ruff>=0.11.6,<1',
    'isort>=6.0.1,<7',
    'pytest>=8.3.5,<9',
]

[tool.isort]
profile = "black"

[tool.black]
exclude = 'src/migrations/'

[tool.ruff]
line-length = 88  # Match Black's default line length
lint.select = ["E", "F", "W", "C90"]  # Customize as needed
lint.ignore = ["E501"]  # Ignore line length to avoid conflicts with Black